# telegram-bot-framework

./: .env copy  .env_sample  .gitignore  CONTRIBUTING.md  CURSOR_CONFIGURATION.md  LICENSE  README.md  README2.md  SECURITY.md  SmartMonitTestBot.pickle  TecVitoriaBot.pickle  __init__.py  analise_requisitos_framework.md  bot.log.2024-11-03  comparacao_frameworks.md  demo_bot.bat  frameworks.md  handlers.py  host.bat  kilo_prompt.md  my.env  requirements.txt  secret.key  setup.py  tlgfwk.md  tlgfwk.py  util_config.py  util_console.py  util_decorators.py  util_telegram.py
.github/: FUNDING.yml
data/: jobs.sqlite
docs/: README.md  README_symbols.md  UTIL_IMAP.md  api.md  deploy_module.md  fwk.md  general.md  get_stripe_token.py  github_deploy.md  kilo_prompt.md  pandoc.md  portuguese_article_host.md  post_receive_sample  ptb.md  setup.md  snippet.md  stripe.md  stripe_link2.md  stripe_poc.py  stripe_token.md  test.md  tlgfwk.md
examples/: __init__.py  echo_bot.py  host_monitor.py  host_monitor_by_user.md  host_monitor_by_user.py  host_watch_bot.py  overload_bot.py  sample_bot.py  simplest.py  test_fwk.py
github/: git-webhook.py  github_hook.md
modern_host_watch_bot/: .gitignore  README.md  env.example  generate_key.py  main.py  pyproject.toml  requirements.txt  run.py  setup.py
modern_host_watch_bot/docs/: api.md  architecture.md
modern_host_watch_bot/reverse/: diagrama_arquitetura_host_watch_bot.md  requisitos_host_watch_bot.md  resumo_executivo_host_watch_bot.md
modern_host_watch_bot/src/config/: __init__.py  settings.py
modern_host_watch_bot/src/core/: __init__.py  bot.py
modern_host_watch_bot/src/handlers/: __init__.py  admin_handlers.py  command_handlers.py
modern_host_watch_bot/src/models/: __init__.py  host.py  user.py
modern_host_watch_bot/src/services/: __init__.py  monitoring.py  persistence.py
modern_host_watch_bot/src/utils/: __init__.py  formatters.py  network.py  ssh.py
modern_host_watch_bot/tests/: test_models.py
new_framework/: .env.example  .env.test  .gitignore  ECHO_BOT_GUIDE.md  ECHO_BOT_STATUS.md  EXECUTION_SUCCESS.md  PROBLEMA_RESOLVIDO.md  README.md  REQUIREMENTS.md  VENV_README.md  activate.bat  activate.ps1  demo.env  echo_bot_dev.py  pyproject.toml  quick_test.py  requirements.txt  run_echo_bot.py  setup.py  test_bot_execution.py  test_components.py  test_echo_bot.py  test_echo_bot_complete.py  test_manual.py
new_framework_cursor/: .gitignore  README.md  REQUIREMENTS.md  pyproject.toml  requirements.txt  setup.py
new_framework_cursor/docs/: admin_guide.md  configuration.md  features.md  plugins.md  user_guide.md
new_framework_cursor/examples/: DEMO_SUMMARY.md  README.md  README_DEMO.md  advanced_bot.py  debug_handlers.py  debug_plugin.py  demo.env.example  demo_bot.py  echo_bot.py  env.example  hello_plugin.py  plugin_bot.py  run_demo_bot.bat  run_demo_bot.ps1  run_echo_bot.bat  test_final.py  test_hello_command.py  test_plugin_bot.py  test_plugin_loading.py
new_framework_cursor/src/tlgfwk/: __init__.py
new_framework_cursor/src/tlgfwk/core/: __init__.py  config.py  decorators.py  framework.py  payment_manager.py  persistence_manager.py  plugin_manager.py  scheduler.py  user_manager.py
new_framework_cursor/src/tlgfwk/plugins/: __init__.py  base.py  user_stats.py
new_framework_cursor/src/tlgfwk/utils/: __init__.py  crypto.py  logger.py
new_framework_cursor/tests/: README.md  requirements.txt
ngrok/: warn.md
novo_cnpj_bot/: novo_cnpj_bot.py
plugin_sample/: main.py  plugin_base.py  plugin_manager.py
plugin_system/: __init__.py  main.py  plugin.md  plugin_manager.py
pocs/: job_schedule.py  ngrok_exec.py  path_check.py  paypal_link.py  paypal_link2.py  pdb_post_mortem.py  pickle_read_write.py  poc_crypto.py  poc_env_encrypt.py  sample_bot.py  schdule_bot.py  showenv.py  stripe_token.py  sys_path.py  teams_bot.py  telegram_raw_api.py
python_telegram_framework/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
python_telegram_framework/docs/: analise_requisitos_framework.md
python_telegram_framework/examples/: echo_bot.py  scheduler_bot.py
python_telegram_framework/src/tlgfwk/: __init__.py
python_telegram_framework/src/tlgfwk/core/: config.py  decorators.py  framework.py  persistence_manager.py  plugin_manager.py  scheduler.py  user_manager.py
python_telegram_framework/src/tlgfwk/plugins/: admin_plugin.py  base.py  scheduler_plugin.py
python_telegram_framework/src/tlgfwk/utils/: logger.py
python_telegram_framework/tests/: test_user_manager.py
revamp/: base_class.py
translations/: translations.py
util/: __init__.py  bot_config.json  payment_config_br.json  util_balance.py  (+12 more)
(+109 files in other folders)
