[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tlgfwk"
version = "1.0.0"
description = "A comprehensive Python framework for building Telegram bots"
authors = [
    { name = "Telegram Bot Framework Contributors", email = "contact@tlgfwk.dev" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-telegram-bot>=21.0",
    "python-dotenv>=1.0.0",
    "cryptography>=41.0.0",
    "APScheduler>=3.10.0",
    "requests>=2.31.0",
    "aiofiles>=23.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psutil>=5.9.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=src/tlgfwk --cov-report=html"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["src/tlgfwk"] 